# teste-python-workflow

./: .env.example  .gitignore  main.py  pyproject.toml
.github/workflows/: service-account-pipeline.yml
scripts/: main.py
src/integration/: confluent_integration.py  leanix_integration.py
src/service/: service_account_service.py
src/utils/: .env.environments.example  get_environment_info.py  validate_input.py
