[project]
name = "coe-integration-confluent-access-management"
version = "0.1.0"
description = ""
authors = [
    {name = "João Pedro Watson",email = "joaopedrowatson"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
