[project]
name = "coe-integration-confluent-access-management"
version = "0.1.0"
description = ""
authors = [
    {name = "João Pedro Watson",email = "joaopedro.wat22@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=8.0.1,<9.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.7,<0.16.0)"
]
